# saa-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  __init__.py  api.py  llms-full.txt  llms.txt  package.json
.github/: dependabot.yml
assets/badges/: README.md
assets/diagrams/: README.md
assets/social/: README.md
docs/: known_limits.md
examples/: README.md  saa_integration.py
examples/claude/: README.md
examples/claude/voice_agent/: .env.example  agent.py  requirements.txt
examples/cloud-live-demo/: README.md  index.html  main.js  test_smoke_shape.mjs
examples/elevenlabs/: .env.example  README.md
examples/elevenlabs-cai/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  index.html  main.js  requirements.txt  server.py  test_smoke_shape.mjs  test_smoke_shape.py  twiml.xml
examples/elevenlabs/voice_agent/: README.md  agent.py
examples/livekit/: .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.py  pyproject.toml  requirements.txt  saa_gate.py  serve_token.py  test_smoke_shape.py
examples/livekit/tests/: conftest.py  test_saa_gate.py
examples/livekit/voice_agent_cascaded/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
examples/livekit/voice_agent_cascaded/src/: agent.py
examples/livekit/voice_agent_factory/: README.md  agent.py  requirements.txt
examples/livekit/voice_agent_realtime/: README.md  agent.py  requirements.txt
examples/livekit/web/: .env.example  README.md  app.js  index.html  requirements.txt  styles.css  token_server.py
examples/obs-overlay/: CHANGELOG.md  EVENTS.md  PERFORMANCE.md  README.md  package.json
examples/obs-overlay/examples/: livekit.html  openai-realtime.html  pipecat.html
examples/obs-overlay/schemas/: event.schema.json
examples/obs-overlay/scripts/: bench.mjs  build.mjs
examples/obs-overlay/src/: overlay.css  overlay.html  overlay.js
examples/obs-overlay/tests/: overlay.test.mjs
examples/openai-realtime/: .env.example  Dockerfile  Makefile  README.md  index.html  main.js  requirements.txt  server.py  test_smoke_shape.mjs  test_smoke_shape.py
examples/pipecat/: .env.example  Dockerfile  Makefile  README.md  bot.py  overlay_server.py  pcc-deploy.toml  pytest.ini  requirements-overlay.txt  requirements.txt  saa_gate.py  test_smoke_shape.py
examples/pipecat/tests/: conftest.py  test_gate.py  test_saa_gate.py
examples/pipecat/voice_agent_factory/: .env.example  README.md  bot.py  requirements.txt
examples/pipecat/web/: .env.example  README.md  app.js  token_server.py  voice_agent.py
examples/proactive-agent/: README.md
examples/proactive-agent/elevenlabs-cai/: .env.example  Dockerfile  Makefile  README.md  demo_script.json  proactive.html  proactive.js  proactive_server.py  requirements.txt  test_smoke_shape.py
examples/proactive-agent/livekit/: .env.example  Dockerfile  Makefile  README.md  demo_script.json  proactive_agent.py  requirements.txt  test_smoke_shape.py
examples/production-gate/: README.md  browser-main.js  openai-realtime-bridge.js  token-server.mjs  token-server.test.mjs
examples/python/: README.md  llm.py  main.py  minimal_example.py  pyproject.toml
examples/stream/: .env.example  README.md
examples/twilio/: .env.example  Dockerfile  Makefile  README.md  bridge.py  bridge_deepgram_openai_elevenlabs.py  bridge_openai_realtime.py  requirements.txt  server.py  test_audio.py  test_smoke_shape.py
examples/web/: README.md  llm.js  package.json
src/saa/: client.py
(+42 files in other folders)
